@@ -762,10 +762,10 @@
 				  </child>
 
 				  <child>
-				    <widget class="GtkCheckButton" id="show_colors">
+				    <widget class="GtkCheckButton" id="auto_logging">
 				      <property name="visible">True</property>
 				      <property name="can_focus">True</property>
-				      <property name="label" translatable="yes">_Show colors</property>
+				      <property name="label" translatable="yes">_Log conversations</property>
 				      <property name="use_underline">True</property>
 				      <property name="relief">GTK_RELIEF_NORMAL</property>
 				      <property name="focus_on_click">True</property>
@@ -931,6 +931,25 @@
 				  <property name="visible">True</property>
 				  <property name="homogeneous">False</property>
 				  <property name="spacing">6</property>
+
+				  <child>
+				    <widget class="GtkCheckButton" id="show_colors">
+				      <property name="visible">True</property>
+				      <property name="can_focus">True</property>
+				      <property name="label" translatable="yes">_Show colors</property>
+				      <property name="use_underline">True</property>
+				      <property name="relief">GTK_RELIEF_NORMAL</property>
+				      <property name="focus_on_click">True</property>
+				      <property name="active">False</property>
+				      <property name="inconsistent">False</property>
+				      <property name="draw_indicator">True</property>
+				    </widget>
+				    <packing>
+				      <property name="padding">0</property>
+				      <property name="expand">False</property>
+				      <property name="fill">False</property>
+				    </packing>
+				  </child>
 
 				  <child>
 				    <widget class="GtkHBox" id="foreground_background_hbox">
